# code-demos

./: Cargo.toml  PROJECT_PLAN.md  PROTOTYPE_PLAN.md  README.md  SIMPLE_PERSONAL_PROTOTYPE.md
docker/: Dockerfile
face-swap-app/: .gitignore  NETWORK_SECURITY.md  QUICKSTART.md  README.md  SECURITY_AUDIT.md  SECURITY_FIXES.md  SECURITY_IMPROVEMENTS_APPLIED.md  TESTING.md  app.py  app_original.py  pyproject.toml  pytest.ini  requirements.txt
face-swap-app/static/template_videos/: README.md
face-swap-app/templates/: index.html
face-swap-app/tests/: __init__.py  conftest.py  test_app.py  test_e2e_smoke.py  test_face_detection.py
lessons_content/: 01_hello_world.yaml  02_variables.yaml  03_functions.yaml  04_loops.yaml
resume-to-latex/: .gitignore  README.md  pyproject.toml
resume-to-latex/resume_to_latex/: __init__.py  cli.py  latex_formatter.py  pdf_converter.py  word_converter.py
src/: main.rs
src/ai_assistant/: mod.rs
src/executor/: mod.rs
src/lessons/: mod.rs
src/models/: mod.rs
src/tutor/: mod.rs
src/web/: mod.rs
static/: app.js  index.html  style.css  tutor.html  tutor.js
